--- a/package.json
+++ b/package.json
@@ -4,15 +4,10 @@
   "description": "Automated tests with Cypress and Cucumber",
   "main": "index.js",
   "devDependencies": {
-    "@cypress/skip-test": "^2.6.1",
-    "@shelex/cypress-allure-plugin": "^2.26.5",
     "cypress": "^9.3.1",
     "cypress-cucumber-preprocessor": "^4.3.1",
     "cypress-file-upload": "^5.0.8",
-    "cypress-iframe": "^1.0.1",
-    "cypress-localstorage-commands": "^1.5.0",
-    "eslint": "^7.32.0",
-    "mochawesome": "^7.1.3"
+    "cypress-iframe": "^1.0.1"
   },
   "scripts": {
     "test": "npx cypress open",
@@ -29,6 +24,5 @@
     }
   },
   "author": "Sarah",
-  "license": "ISC",
-  "dependencies": {}
+  "license": "ISC"
 }
